force-app/main/default/objects/Custom_Calendar__c/Custom_Calendar__c.object-meta.xml
<CustomObject>
    <description>This object will be used to capture consultation schedule for various ES user on data by date basis with specific working hours.</description>
    <label>Custom Calendar</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Custom Calendar Object</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Calendar</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>