force-app/main/default/objects/Custom_Calendar__c/fields/Availability_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Availability_End_Time__c</fullName>
    <label>Availability - End Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>08 00 AM</fullName>
            </value>
            <value>
                <fullName>08 30 AM</fullName>
            </value>
            <value>
                <fullName>09 00 AM</fullName>
            </value>
            <value>
                <fullName>09 30 AM</fullName>
            </value>
            <value>
                <fullName>10 00 AM</fullName>
            </value>
            <value>
                <fullName>10 30 AM</fullName>
            </value>
            <value>
                <fullName>11 00 AM</fullName>
            </value>
            <value>
                <fullName>11 30 AM</fullName>
            </value>
            <value>
                <fullName>12 00 PM</fullName>
            </value>
            <value>
                <fullName>12 30 PM</fullName>
            </value>
            <value>
                <fullName>01 00 PM</fullName>
            </value>
            <value>
                <fullName>01 30 PM</fullName>
            </value>
            <value>
                <fullName>02 00 PM</fullName>
            </value>
            <value>
                <fullName>02 30 PM</fullName>
            </value>
            <value>
                <fullName>03 00 PM</fullName>
            </value>
            <value>
                <fullName>03 30 PM</fullName>
            </value>
            <value>
                <fullName>04 00 PM</fullName>
            </value>
            <value>
                <fullName>04 30 PM</fullName>
            </value>
            <value>
                <fullName>05 00 PM</fullName>
            </value>
            <value>
                <fullName>05 30 PM</fullName>
            </value>
            <value>
                <fullName>06 00 PM</fullName>
            </value>
            <value>
                <fullName>01 PM</fullName>
                <isActive>false</isActive>
                <label>01 PM</label>
            </value>
            <value>
                <fullName>02 PM</fullName>
                <isActive>false</isActive>
                <label>02 PM</label>
            </value>
            <value>
                <fullName>03 PM</fullName>
                <isActive>false</isActive>
                <label>03 PM</label>
            </value>
            <value>
                <fullName>04 PM</fullName>
                <isActive>false</isActive>
                <label>04 PM</label>
            </value>
            <value>
                <fullName>05 PM</fullName>
                <isActive>false</isActive>
                <label>05 PM</label>
            </value>
            <value>
                <fullName>06 PM</fullName>
                <isActive>false</isActive>
                <label>06 PM</label>
            </value>
            <value>
                <fullName>08 AM</fullName>
                <isActive>false</isActive>
                <label>08 AM</label>
            </value>
            <value>
                <fullName>09 AM</fullName>
                <isActive>false</isActive>
                <label>09 AM</label>
            </value>
            <value>
                <fullName>10 AM</fullName>
                <isActive>false</isActive>
                <label>10 AM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>