force-app/main/default/objects/Custom_Calendar__c/fields/AvailabilityStartTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityStartTimeFormula__c</fullName>
    <formula>IF(!ISBLANK(TEXT(Availability_Start_Time__c)), IF(CONTAINS(TEXT(Availability_Start_Time__c),&#39;PM&#39;)&amp;&amp; AND(TEXT(Availability_End_Time__c) != &#39;12 00 PM&#39;,TEXT(Availability_End_Time__c) != &#39;12 30 PM&#39;), TEXT(Value(LEFT(TEXT(Availability_Start_Time__c),2))+12)+TRIM(MID(TEXT(Availability_Start_Time__c), 4, 2)), LEFT(TEXT(Availability_Start_Time__c),2)+TRIM(MID(TEXT(Availability_Start_Time__c), 4, 2))), &#39;0900&#39;)</formula>
    <label>AvailabilityStartTimeFormula</label>
    <type>Text</type>
</CustomField>