force-app/main/default/objects/Custom_Calendar__c/fields/Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Date__c</fullName>
    <label>Calendar Date</label>
    <type>Date</type>
</CustomField>