force-app/main/default/objects/Custom_Calendar__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downtown Toronto</fullName>
            </value>
            <value>
                <fullName>North York Civic Centre - 5100 Yonge Street - Main Floor</fullName>
            </value>
            <value>
                <fullName>Scarborough Civic Centre - 150 Borough Drive - Main Floor</fullName>
            </value>
            <value>
                <fullName>Parkdale Innovation Centre (1464 Queen Street West)</fullName>
            </value>
            <value>
                <fullName>WeWork, Downtown Toronto</fullName>
                <isActive>false</isActive>
                <label>WeWork, Downtown Toronto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>