force-app/main/default/objects/Custom_Calendar__c/fields/On_Leave__c.field-meta.xml
<CustomField>
    <fullName>On_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Leave</label>
    <type>Checkbox</type>
</CustomField>