force-app/main/default/objects/Custom_Calendar__c/fields/Unique_User_Record_key__c.field-meta.xml
<CustomField>
    <fullName>Unique_User_Record_key__c</fullName>
    <formula>User__c +&#39;==&#39;+ TEXT(Calendar_Date__c)+&#39;==&#39;+ TEXT(Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique User Record key</label>
    <type>Text</type>
</CustomField>