force-app/main/default/objects/Custom_Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Calendar_Date__c</columns>
    <columns>Location__c</columns>
    <columns>AvailabilityStartTimeFormula__c</columns>
    <columns>AvailabilityEndTimeFormula__c</columns>
    <columns>Availability_End_Time__c</columns>
    <columns>Availability_Start_Time__c</columns>
    <columns>On_Leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>